clusters/dev/hsl-jore4/jore4-ingress-patch.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jore4-ingress
  namespace: hsl-jore4
  annotations:
    appgw.ingress.kubernetes.io/appgw-ssl-certificate: hsl-jore4-dev-cert

spec:
  rules:
    # only listen to requests from this host
    - host: dev.jore.hsl.fi
      http:
        paths:
          - path: /
            backend:
              serviceName: jore4-backend
              servicePort: 80
